--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "mongodb": "^6.3.0",
     "zod": "^3.22.4"
   },
+  "peerDependencies": {
+    "mongoose": "^8.1.1"
+  },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "typescript": "^5.3.3",
